Bug 388757 - Can't manually check for updates
Summary: Can't manually check for updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-09 21:43 UTC by Fabian Vogt
Modified: 2018-01-10 01:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2018-01-09 21:43:56 UTC
As the "Check for updates" entry in the settings page's action bar is gone, this is now impossible.
Comment 1 Nate Graham 2018-01-09 22:44:58 UTC
Let's not put this back on the Settings page, but rather on the updates page, or perhaps on the sidebar, to the right of the Updates list item.
Comment 2 Aleix Pol 2018-01-10 01:51:42 UTC
Git commit 1f9ed386e5ceebb285adc9de0ffc5aa856f0f7bd by Aleix Pol.
Committed on 10/01/2018 at 01:46.
Pushed by apol into branch 'master'.

Expose global actions again

M  +3    -1    discover/qml/SourcesPage.qml
M  +5    -0    libdiscover/resources/ResourcesModel.h

https://commits.kde.org/discover/1f9ed386e5ceebb285adc9de0ffc5aa856f0f7bd