Expose global actions again

BUG: 388757